fixed footer on mobile

--- a/css/stickymenu.css
+++ b/css/stickymenu.css
@@ -7,9 +7,16 @@ body {
 	background-color: #EEE;
 }
 
-.clearfix:before,.clearfix:after {content: " "; display: table;}
-.clearfix:after {clear: both;}
-.clearfix {zoom: 1;}
+.clearfix:before, .clearfix:after {
+	content: " "; display: table;
+}
+
+.clearfix:after {
+	clear: both;
+}
+.clearfix {
+	zoom: 1;
+}
 
 #container {
 	-moz-box-sizing: border-box;
@@ -146,6 +153,16 @@ nav ul li a:visited {
 		color: white !important;
 	}
 
+	#bottom-nav {
+		padding-top: 1%;
+		position: fixed;
+		bottom: 0;
+		left: 0;
+		width: 100%;
+		height: 5%;
+		overflow: hidden;
+	}
+
 	nav ul {width: 100%; padding: 0;}
 	nav ul:nth-of-type(2) {float: left;}
 	nav ul li, nav ul:nth-of-type(2) li {float: none;}
@@ -205,9 +222,20 @@ nav ul li a:visited {
 		position: fixed;
 		top: 0; left: 0;
 		width: 100%;
-		height: 100%;
+		height: 94%;
 		padding: 0 1% 1% 43px;
 		overflow: scroll;
+	}
+
+	#bottom-nav {
+		padding-top: 0.5%;
+		padding-bottom: 0.5%;
+		position: fixed;
+		bottom: 0;
+		left: 0;
+		width: 100%;
+		height: 4%;
+		overflow: hidden;
 	}
 
 	div.menu-trigger {
